# scrapbox7

./: README.md
ir_sample/: README.md
ir_sample/elasticsearch-ann-sample/: main.py
ir_sample/elasticsearch-ann-similar-patterns/: README.md  client.py  main.py
ir_sample/elasticsearch-ann-word2vec/: README.md  main.py  vectorizer.py
ir_sample/elasticsearch-percolate-query/: loader.py  main.py
ir_sample/elasticsearch-reranking-rescore/: main.py
ir_sample/elasticsearch-reranking-rescore-patterns/: README.md  client.py  main.py
ir_sample/elasticsearch-sparse-vector/: README.md  compose.yml  main.py
ir_sample/elasticsearch-sparse-vector-splade/: README.md  main.py  utils.py  vectorizer.py
ir_sample/execute-es-sample/: README.md  run.sh
ir_sample/qdrant-search-empty-vector/: README.md  client.py  condition.py  main.py  query.py  utils.py
ir_sample/sample-rag-llama/: .gitignore  README.md  main.py  prompt.py  utils.py
ir_sample/unicoil-encoder-decoder/: README.md  encoder.py  main.py
java_sample/: README.md
java_sample/bucket-sort/: README.md  build.gradle
java_sample/sample-gradle-app/: README.md
kotlin_sample/: README.md
kotlin_sample/gradle-subprojects/: .gitignore  README.md  settings.gradle.kts
kotlin_sample/kotlin-tour/: README.md  basic.kt  classes.kt  collections.kt  controlCondition.kt  controlLoop.kt  functions.kt  functionsLambda.kt  main.kt  nullSafety.kt
kotlin_sample/rest-template-demo/: README.md  build.gradle.kts  settings.gradle.kts
kotlin_sample/single-gradle-project/: README.md  settings.gradle.kts
kotlin_sample/spring-batch-application/: README.md  build.gradle.kts  settings.gradle.kts
ml_sample/: README.md
ml_sample/calibration-imbalanced-dataset/: README.md  calibration.py  data.py  evaluate.py  main.ipynb
ml_sample/calibration-isotonic-regression/: README.md  main.py
ml_sample/calibration-metrics/: README.md  data.py  evaluate.py  main.py  metrics.py
ml_sample/contrastive-learning-focal-loss/: README.md  loss.py  main.py
ml_sample/contrastive-learning-loss-functions/: README.md  loss.py  main.py
ml_sample/cross-encoder-reranking/: README.md  main.py
ml_sample/distil-margin-mse-loss-function-triplet/: README.md  losses.py  main.py
ml_sample/feature-importance-regression-coefficients/: main.py  permutation.py  shap_.py  tree.py
ml_sample/feature-importances/: README.md  ablation.py  coef.py  covariance.py
ml_sample/focal-loss/: README.md  dataset.py  evaluate.py  loss.py  main.py  model.py  preprocessor.py  train.py  vectorizer.py
ml_sample/infonce-loss-function-triplet/: README.md  losses.py  main.py
ml_sample/light-se-module/: README.md  dataset.py  evaluate.py  main.py  model.py
ml_sample/light-se-module-with-bert/: .gitignore  README.md  data.py  dataset.py  loader.py  main.py  model.py  trainer.py  utils.py  vectorizer.py
ml_sample/loss-function-scaling-parameter/: README.md  loss.py  main.py
ml_sample/mlflow-projects/: MLproject  README.md  python_env.yml  train.py  validate.py
ml_sample/mlflow-recipes/: .gitignore  README.md  recipe.yaml
ml_sample/use-blip/: main.py  (+4 more)
nlp_sample/: README.md
py_sample/: README.md
py_sample/amazonlinux-with-poetry/src/: README.md  pyproject.toml
py_sample/amazonlinux-with-poetry/src/batch/: main.py
py_sample/poetry-use-custom-library/app/: pyproject.toml
py_sample/poetry-use-custom-library/app/app/: __main__.py
py_sample/poetry-use-custom-library/custom-lib/: pyproject.toml
py_sample/poetry-use-custom-library/custom-lib/custom_lib/: __init__.py
py_sample/ruff-numpy-pandas-linting/: README.md  pyproject.toml
py_sample/ruff-numpy-pandas-linting/app/: main.py  processor.py  schema.py
py_sample/ruff-numpy-pandas-linting/data/: users.csv
rust_sample/: README.md
shell_sample/: README.md
web_sample/: README.md
(+397 files in other folders)
