[project]
name = "batch"
version = "0.1.0"
description = ""
authors = [
    {name = "wararaki",email = "ky7.ott.w@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]

[tool.poetry.dependencies]
torch = [
    { platform = "darwin", version = "^2.5.0", source = "pypi" },
    { platform = "linux", version = "v2.5.0", source = "pypi", markers = "platform_machine == 'arm64'" },
    { platform = "linux", version = "v2.5.0", source = "torch-cpu", markers = "platform_machine == 'x86_64'"},
]

[tool.poetry.scripts]
batch-runner = "app.batch.main:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
