[project]
name = "batch"
version = "1.0.0"
description = ""
authors = [
    {name = "wararaki",email = "ky7.ott.w@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy (>=2.2.1,<3.0.0)",
]
package-mode = false

[tool.poetry.dependencies]
torch = [
    { platform = "darwin", version = "^2.5.0", source = "pypi" },
    { platform = "linux", version = "^2.5.0", source = "pypi", markers = "platform_machine == 'arm64'" },
    { platform = "linux", version = "^2.5.0", source = "torch-cpu", markers = "platform_machine == 'x86_64'"},
]

[[tool.poetry.source]]
name = "torch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[tool.poetry.scripts]
batch-runner = "batch.main:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
