[project]
name = "batch"
version = "1.0.0"
description = ""
authors = [
    {name = "wararaki",email = "ky7.ott.w@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy (>=2.2.1,<3.0.0)",
    "torch (>=2.5.1,<3.0.0)",
]

[tool.poetry.scripts]
batch-runner = "batch.main:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
