[project]
name = "app"
version = "0.1.0"
description = ""
authors = [
    {name = "wararaki",email = "ky7.ott.w@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]

[tool.poetry.dependencies]
lib = { path = "../lib" }
custom-lib = { path = "../custom-lib" }


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
